--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             line-height: 1.5;
         }
         .button {
-            background-color: #333;
+            background-color: #0021dc;
             color: #fff;
             padding: 10px 20px;
             border-radius: 5px;
