--- a/index.html
+++ b/index.html
@@ -54,7 +54,24 @@
         .button:hover {
             background-color: #444;
         }
-
+     /* 媒体查询 */
+     @media (max-width: 768px) {
+            header {
+                padding: 10px;
+            }
+            nav {
+                padding: 5px;
+            }
+            nav a {
+                margin: 0 5px;
+            }
+            main {
+                margin: 10px;
+                padding: 10px;
+            }
+            .section {
+                margin-bottom: 10px;
+            }
     </style>
 </head>
 <body>
@@ -62,7 +79,7 @@
         <h1>2</h1>
     </header>
     <nav>
-    <p>此页面为2的地址发布页            请使用https://协议访问2官网    </p>
+    <p>此页面为2的地址发布页</p>
     </nav>
     <main>
         <div class="section">
@@ -90,7 +107,7 @@
             <a href="https://2ray.nl" class="button">2ray.nl</a>
             <p>我们推荐PC和Andriod手机用户使用Chrome(谷歌)浏览器访问，iPhone用户我们建议您使用手机自带Safria浏览器访问。</p>
         <p>大陆地区用户我们建议您可以使用VPN或者代理的方式来访问我们的永久地址。</p>
-        <p>大陆地区用户我们强烈建议您截图收藏当前页面(2.github.io)。</p>
+        <p>大陆地区用户我们强烈建议您截图收藏当前页面(dizhi2.github.io)。</p>
         </div>
     </main>
     <footer>
