--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             color: #fff;
             padding: 10px;
             text-align: center;
+            font-size: 30px;
+
+
         }
         nav a {
             color: #fff;
